--- a/src/common/components/Projects/Projects.module.scss
+++ b/src/common/components/Projects/Projects.module.scss
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  height: fit-content;
   background-color: var(--color-bg-projects);
 }
 
@@ -11,7 +12,7 @@
   font-size: 36px;
   font-weight: 700;
   color: var(--color-text-light);
-  margin: 1em 0;
+  margin: 0 0 20px 0;
 }
 
 .grid {
