--- a/src/common/components/Modal/Modal.module.scss
+++ b/src/common/components/Modal/Modal.module.scss
@@ -52,6 +52,8 @@
   margin-top: 1em;
   margin-bottom: 0.5em;
   height: 70px;
+  min-width: fit-content;
+  flex-wrap: wrap;
 }
 
 .content {
@@ -169,4 +171,202 @@
 
 .github button:hover p {
   color: white;
+}
+
+@media screen and (max-width: 1080px) {
+  .modal_content {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 600px;
+    width: 100%;
+    min-width: none;
+    background-color: #273042;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    z-index: 101;
+  }
+
+  .tags {
+    margin-top: 0.5em;
+    margin-bottom: 0.1em;
+    height: fit-content;
+    min-width: fit-content;
+    flex-wrap: wrap;
+  }
+
+  .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    color: var(--color-text-light);
+    width: 100%;
+    min-width: unset;
+    margin-left: 5px;
+    margin-right: 5px;
+    min-height: 200px; 
+  }
+
+  .objective {
+    
+    min-width: none;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .objective p {
+    width: 100%;
+    min-width: none;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .buttons_container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    min-width: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .buttons_container button {
+    margin: 50px 20px;
+  }
+
+  .demo button {
+    width: 120px;
+    height: 40px;
+  }
+
+  .demo button svg {
+    width: 35px;
+  }
+
+  .demo button p {
+    font-size: 24px;
+  }
+
+  .github button {
+    width: 120px;
+    height: 40px;
+  }
+
+  .github button svg {
+    width: 35px;
+  }
+
+  .github button p {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .project_image {
+   display: none;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .modal_content {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 600px;
+    width: 100%;
+    min-width: none;
+    background-color: #273042;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+    z-index: 101;
+  }
+
+  .tags {
+    margin-top: 0.5em;
+    margin-bottom: 0.1em;
+    height: fit-content;
+    min-width: fit-content;
+    flex-wrap: wrap;
+  }
+
+  .project_image {
+    display: none;
+  }
+
+  .info {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    color: var(--color-text-light);
+    width: 100%;
+    min-width: unset;
+    margin-left: 5px;
+    margin-right: 5px;
+    min-height: 200px; 
+  }
+
+  .objective {
+    
+    min-width: none;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .objective p {
+    width: 100%;
+    min-width: none;
+    margin: 0px;
+    padding: 0px;
+  }
+
+  .buttons_container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    min-width: none;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .buttons_container button {
+    margin: 50px 20px;
+  }
+
+  .demo button {
+    width: 120px;
+    height: 40px;
+  }
+
+  .demo button svg {
+    width: 35px;
+  }
+
+  .demo button p {
+    font-size: 24px;
+  }
+
+  .github button {
+    width: 120px;
+    height: 40px;
+  }
+
+  .github button svg {
+    width: 35px;
+  }
+
+  .github button p {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .buttons_container button {
+    margin: 50px 5px;
+  }
 }
