--- a/src/common/components/Navbar/Navbar.module.scss
+++ b/src/common/components/Navbar/Navbar.module.scss
@@ -9,6 +9,7 @@
   margin-top: 20px; 
   justify-content: space-between;
   align-items: center;
+  overflow: unset;
   background-color: var(--color-bg-home);
 }
 
@@ -33,4 +34,58 @@
 
 .navbar__link_socials svg:hover {
   fill: var(--color-text-link);
+}
+
+.navbar_menu {
+  display: none;
+}
+
+.menu_container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: column;
+  overflow: unset;
+  text-align: end;
+  
+  padding: 2rem;
+  position: absolute;
+  right: 0;
+  top: 40px;
+  margin-top: 1rem;
+  min-width: 150px;
+  border-radius: 5px;
+  background-color: var(--color-bg-projects);
+  box-shadow: 0px 0px 5px rgba(0,0, 0,0.2);
+}
+
+.menu_container p {
+  color: #fff;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 35px;
+  text-transform: capitalize;
+  margin: 0 1rem;
+  cursor: pointer;
+}
+
+.menu_container button {
+  padding: 0.5rem 1rem;
+  color: #fff;
+  background: #FF4820;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 35px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 1080px) {
+  .navbar_menu {
+    display: flex;
+  }
 }
