fixed margin on hamburger menu

--- a/src/common/components/Navbar/Navbar.module.scss
+++ b/src/common/components/Navbar/Navbar.module.scss
@@ -38,6 +38,7 @@
 
 .navbar_menu {
   display: none;
+  margin-right: 10px;
 }
 
 .menu_container {
@@ -53,6 +54,7 @@
   right: 0;
   top: 40px;
   margin-top: 1rem;
+  margin-right: 10px;
   min-width: 150px;
   border-radius: 5px;
   background-color: var(--color-bg-projects);
