--- a/src/common/components/Navbar/Navbar.module.scss
+++ b/src/common/components/Navbar/Navbar.module.scss
@@ -48,7 +48,7 @@
   flex-direction: column;
   overflow: unset;
   text-align: end;
-  
+  z-index: 100;
   padding: 2rem;
   position: absolute;
   right: 0;
