Added responsive for vertical height

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -125,9 +125,9 @@ button:hover {
   --color-button-text-github: #ffffff;
   --color-button-github-hover: #5764af;
   
-  --color-button-info: #4c9b74;
+  --color-button-info: #4C589B;
   --color-button-text-info: #ffffff;
-  --color-button-info-hover: #3e8662;
+  --color-button-info-hover: #5764af;
 
   --color-button-std-blue: #363490;
   --color-button-text-blue: #ffffff;
