Fix for iphone12 pro

--- a/src/common/components/Projects/ProjectCard.module.scss
+++ b/src/common/components/Projects/ProjectCard.module.scss
@@ -84,7 +84,7 @@
   justify-content: center;
   text-align: center;
   color: var(--color-text-light);
-  margin: 5px 0 25px 0;
+  margin: 5px 0 0 0;
 }
 
 @media screen and (max-width: 310px) {
