Fix for iphone12 pro

--- a/src/common/components/Home/Home.module.scss
+++ b/src/common/components/Home/Home.module.scss
@@ -251,7 +251,7 @@
   }
 }
 
-@media screen and ( max-height: 650px ){
+@media screen and ( max-height: 800px ) and (max-width: 550px) {
   .chevronDown {
     display: none;
   }
